# fast-boundary-wavelet-packets

./: .claudeignore  .gitignore  CLAUDE.md  CMakeLists.txt  Makefile  README.md  pyproject.toml  requirements.txt
.claude/: settings.json
.claude/agents/: reference-expert.md
benchmarks/: results_1d_1b.json  results_1d_64b.json  results_2d_1b.json  results_2d_64b.json
bindings/: python_bindings.cpp
docs/: output-format-1d.md  output-format-2d.md
include/: matrix_build.h  matrix_build.hpp  orthogonalize.h  orthogonalize.hpp  sparse_math.h  sparse_math.hpp  tensor_util.hpp  transform.hpp  wavelet.h  wavelet.hpp
scripts/: benchmark_implementations.py  generate_reference_data.py  plot_benchmark_results.py
src/: check_build.cpp  matrix_build.cpp  orthogonalize.cpp  sparse_math.cpp  transform.cpp  wavelet.cpp
stubs/: fbwp.pyi
tests/: test_boundary_build_reference.cpp  test_matrix_build.cpp  test_matrix_build_reference.cpp  test_orthogonalize.cpp  test_sparse_math.cpp  test_transform.cpp  test_transform_2d_reference.cpp  test_transform_reference.cpp  test_util.hpp  test_wavelet.cpp
tests/data/: db2_16_a.pt  db2_16_boundary_a.pt  db2_16_boundary_gs_a.pt  db2_16_boundary_gs_s.pt  db2_16_boundary_qr_a.pt  db2_16_boundary_qr_s.pt  db2_16_boundary_s.pt  db2_16_s.pt  db2_8_a.pt  db2_8_boundary_a.pt  db2_8_boundary_gs_a.pt  db2_8_boundary_gs_s.pt  db2_8_boundary_qr_a.pt  db2_8_boundary_qr_s.pt  db2_8_boundary_s.pt  db2_8_s.pt  db3_16_a.pt  db3_16_boundary_a.pt  db3_16_boundary_gs_a.pt  db3_16_boundary_gs_s.pt  db3_16_boundary_qr_a.pt  db3_16_boundary_qr_s.pt  db3_16_boundary_s.pt  db3_16_s.pt  haar_16_a.pt  haar_16_boundary_a.pt  haar_16_boundary_gs_a.pt  haar_16_boundary_gs_s.pt  haar_16_boundary_qr_a.pt  haar_16_boundary_qr_s.pt  haar_16_boundary_s.pt  haar_16_s.pt  haar_8_a.pt  haar_8_boundary_a.pt  haar_8_boundary_gs_a.pt  haar_8_boundary_gs_s.pt  haar_8_boundary_qr_a.pt  haar_8_boundary_qr_s.pt  haar_8_boundary_s.pt  haar_8_s.pt  (+70 more)
